assets/stylesheets/default.css
/* Base structure */
body {
  display: -ms-flexbox;
  display: flex;
  color: #111111;
  background-color: #fefefe;
  width: 100vw;
  height: 100%;
  background-image: url("../images/bg.png");
  background-repeat: repeat;
}

body{
  font-size: 2vw;
}

img {
  max-width: 100%;
  display: block;
  height: auto;
}

/* landing page */
body {
  height: 100vh;
}

#landing  {
  background-image: url("../images/casual-diversity-female-1600w.jpeg");
  background-repeat: no-repeat;
  background-position: 50% 0%; /* centers image horizontally*/
}

#name {
  font-size: 2.25rem;
  font-weight: 700;
}

/* Navigation */
#logo {
  width: 100px;
  height: 100px;
}

ul.nav-links {
padding: 0px;
}

ul.nav-links li {
display: inline;
list-style-type: none;
text-align: center;
}

.nav-links {
  font-size: 1.5rem;
  padding: .5rem .25rem;
  font-weight: 700;
  background-color: transparent;
  border-bottom: .25rem solid transparent;
}

.nav-link1:hover,
.nav-link1:focus {
  border-bottom-color: #22ba2e;
}

.active {
  border-bottom-color: #22ba2e;
}

/* Links */
a,
a:focus,
a:hover {
  color: #333333;
  text-decoration: none;
  font-weight: 700;
}

/* buttons */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #22ba2e;
  border: .05rem solid #22ba2e;
}

.btn-secondary:active {
  color: #444444 !important;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #22ba2e !important;
  border: .05rem solid #22ba2e !important;
}

#findUs{
  max-width: 200px;
  height: auto;
}

/* Main */
.cover {
  padding: 0 1.5rem;
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: 700;
}

.main {
  align-content: flex-start;
}

.card-custom {
  width: 40rem;
  margin: 2rem auto;
  background-color: rgba(250, 250, 250, 0.7);
}

/* styles */
.bd-placeholder-img {
  font-size: 1.125rem;
  text-anchor: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* lists */
#goals li {
  padding: 0.5rem;
}

/* media breaks */
@media (min-width: 768px) {
  .nav-link {
    font-size: 1.6rem;
  }
  .bd-placeholder-img-lg {
    font-size: 3.5rem;
  }
}

